tests/__fixtures__/fail/en/no-comma.php
<?php declare(strict_types=1);

return [
    "foo" => "foo",
    "bar_quz" => "bar quz"
];
